# eve-AI

client/src/: App.tsx
eve-ai/: .gitignore  alembic.ini  pyproject.toml
eve-ai/app/: main.py
eve-ai/app/api/: analytics.py  characters.py  chat.py  config.py
eve-ai/app/core/: config.py  lifespan.py
eve-ai/app/models/: database.db  database.py  schemas.py  seed.py
eve-ai/app/services/: ai_service.py  config_service.py
eve-ai/app/utils/: timezone_helpers.py
eve-ai/migrations/: env.py
eve-ai/migrations/versions/: 20251126_1954-5bfa5098a3e6_init.py  20251126_2132-1e314b50335b_init.py  20251128_1623-6313b559ff56_refactor_database.py  20251129_1313-6ce2d88f27b7_init.py  20251129_1748-d764cbce7425_init.py  20251210_1213-397597089499_init.py  20251215_0910-e88e6a6da0ff_init.py
eve-ai/tests/services/: ai_service_test.py  config_service_test.py
eve-client/: .cta.json  .env.example  index.html  package-lock.json  package.json
eve-client/src/: routeTree.gen.ts  styles.css  types.d.ts
eve-client/src/api/: characters.ts  chat.ts
eve-client/src/components/: AIChat.tsx  AIModelWrapper.tsx  AIResponseMessage.tsx  AIVRMModel.tsx  AddNewCharacter.tsx  CharTrait.tsx  CharacterElement.tsx  CharacterListButton.tsx  CharacterMenuElement.tsx  CharactersList.tsx  ConfigSettings.tsx  CurrentDate.tsx  ResumeConversation.tsx  SelectedCharacterDetails.tsx  UserMessage.tsx
eve-client/src/routes/: characters.tsx  chat.tsx  index.tsx
eve-client/src/routes/chat/: $characterId.tsx
